--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,26 @@
-.app__title {
-  color: aqua;
+.app {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(168, 173, 182);
+  display: grid;
+  place-items: center;
 }
 
+.app__container {
+  height: 700px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(232, 234, 237);
+  border-radius: 12px;
+  padding: 32px 0;
+}
+
+.app__todoContainer {
+  flex: 1;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
