--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.app {
+/* .app {
   height: 100vh;
   width: 100vw;
   background-color: rgb(168, 173, 182);
@@ -23,4 +23,4 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+} */
