--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,29 @@
 .app {
+  flex: 0.6;
   height: 100vh;
   width: 100vw;
   background-color: rgb(170, 197, 248);
   display: grid;
   place-items: center;
-
 }
-/* 
+
 .app__container {
-  height: 700px;
+  height: 100px;
   width: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(232, 234, 237);
+  background-color: rgb(221, 247, 234);
   border-radius: 12px;
   padding: 32px 0;
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
 }
 
+.app__container > h1 {
+  margin: 10px;
+}
+
+/* 
 .app__todoContainer {
   flex: 1;
   width: 100%;
