--- a/src/Todo.css
+++ b/src/Todo.css
@@ -1,4 +1,5 @@
 .todo {
+    display: flex;
   text-align: center;
   background: rgba(255, 255, 255, 0.25);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
@@ -7,6 +8,7 @@
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   cursor: pointer;
-  padding: 3px;
+  /* padding: 1px; */
   margin: 7px;
+  width: 500px;
 }
