--- a/src/Todo.css
+++ b/src/Todo.css
@@ -2,13 +2,13 @@
     display: flex;
   text-align: center;
   background: rgba(255, 255, 255, 0.25);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  box-shadow: 0 8px 32px 0 rgba(152, 157, 221, 0.37);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
   cursor: pointer;
-  /* padding: 1px; */
+  padding: 1px;
   margin: 7px;
   width: 500px;
 }
